<resources>
    <string name="app_name">EcommerceApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="shoes">کفش</string>
    <string name="book">کتاب</string>
    <string name="shirt">تی شرت</string>
    <string name="mobile">موبایل</string>
    <string name="watch">ساعت</string>
</resources>