<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.ecommerceapp.MainActivity">
    <group android:checkableBehavior="single" >
    <item
        android:id="@+id/action1"
        android:orderInCategory="100"
        android:layout_gravity="end"
        android:title="@string/shoes"
        android:icon="@drawable/ic_baseline_sentiment_dissatisfied_24"
        app:showAsAction="never" />
    <item
        android:id="@+id/action2"
        android:orderInCategory="100"
        android:title="@string/book"
        android:icon="@drawable/ic_baseline_sentiment_satisfied_24"
        app:showAsAction="never" />
    <item
        android:id="@+id/action3"
        android:orderInCategory="100"
        android:title="@string/shirt"
        android:icon="@drawable/ic_baseline_sentiment_satisfied_alt_24"
        app:showAsAction="never" />
    <item
        android:id="@+id/action4"
        android:orderInCategory="100"
        android:title="@string/mobile"
        android:icon="@drawable/ic_baseline_sentiment_very_dissatisfied_24"
        app:showAsAction="never" />
    <item
        android:id="@+id/action5"
        android:orderInCategory="100"
        android:title="@string/watch"
        android:icon="@drawable/ic_baseline_sentiment_very_satisfied_24"
        app:showAsAction="never" />
    </group>
</menu>